<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <androidx.appcompat.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_view_latest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:elevation="8dp"
        android:foreground="?attr/selectableItemBackground"
        card_view:contentPadding="8dp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lineardd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/product_title"
                    android:textSize="26sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/latest_label"
                    android:textSize="26sp" />
            </LinearLayout>


            <ImageView
                android:id="@+id/appimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lineardd"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:scaleType="centerInside"
                android:src="@drawable/apple1"
                android:adjustViewBounds="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:id="@+id/linear22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/appimage"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/description_label"
                    android:textSize="20sp" />


                <TextView

                    android:id="@+id/pric"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/price_label"
                    android:textSize="20sp"

                    />
            </LinearLayout>


            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"

                android:layout_alignParentRight="true"
                android:layout_below="@id/linear22"
                android:gravity="end"
                android:text="@string/product_price" />

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear22"
                android:text="Apple ipad 2 with retina\n display and 10.5' screen"
                android:textSize="16sp" />
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/qty"
                android:layout_marginTop="8dp"
                android:text="Available Qty"
                android:layout_below="@id/detail"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/qty_number"
                android:layout_marginTop="8dp"
                android:text="30"
                android:layout_below="@id/qty"
                android:textSize="16sp"
                />

            <ImageButton

                android:id="@+id/buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/price"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/cart"
                android:gravity="end"
                android:src="@drawable/ic_add_shopping_cart_black_24dp"

                android:onClick="onBuy" />


        </RelativeLayout>


    </androidx.appcompat.widget.CardView>
</LinearLayout>