<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"

    >

    <androidx.appcompat.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:elevation="8dp"
        android:foreground="?attr/selectableItemBackground">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/lineardd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_title"
                    android:layout_gravity="start"
                    android:text="@string/product_title"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_code"

                    android:layout_gravity="end"
                    android:text="@string/product_cod"
                    android:textSize="18sp"
                    />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/appimage"
                android:layout_below="@id/lineardd"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/ivFakadi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/apple1"
                    android:layout_gravity="fill"
                   android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear22"
                android:layout_below="@id/appimage">

                <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:text="@string/description_label"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    />


                <TextView

                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:id="@+id/pric"
                    android:text="@string/price_label"
                    android:textSize="20sp"

                    />
            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/price"
                android:text="@string/product_price"

                android:layout_below="@id/linear22"
                android:gravity="end"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail"
                android:text="Apple ipad 2 with retina\n display and 10.5' screen"
                android:layout_below="@id/linear22"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/qty"
                android:layout_marginTop="8dp"
                android:text="Available Qty"
                android:layout_below="@id/detail"
                android:textSize="16sp"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/qty_number"
                android:layout_marginTop="8dp"
                android:text="30"
                android:layout_below="@id/qty"
                android:textSize="16sp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/qty_edit"
                android:inputType="number"
                android:layout_marginTop="8dp"
                android:hint="Enter Qty"
                android:layout_below="@id/qty"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@id/qty_number"
                android:layout_toRightOf="@id/qty_number"
                android:layout_marginLeft="80dp"
                android:gravity="center|center_horizontal" />

            <ImageButton

                android:contentDescription="@string/cart"
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buy"
                android:layout_below="@id/price"
                android:gravity="end"
                android:src="@drawable/ic_add_shopping_cart_black_24dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="onBuy" />



        </RelativeLayout>


    </androidx.appcompat.widget.CardView>
</LinearLayout>